Closed Bug 289353 Opened 21 years ago Closed 20 years ago

DIVs shift and grey areas appear when scrolling page on Firefox

Categories

(Core Graveyard :: Widget: Mac, defect, P2)

PowerPC
macOS
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8beta3

People

(Reporter: jhpedemonte, Assigned: sfraser_bugs)

References

()

Details

(Keywords: testcase, Whiteboard: [no l10n impact])

Attachments

(2 files)

When scrolling the page listed in URL field, parts of the page shift unnaturally, and grey areas appear. Happens on Firefox/Mac, but not on other platforms, and not on Camino, which means that it might point to a bug in the carbon widget code.
Seems to be related to the floating DIV on the left hand side. If I remove that from the HTML code, then I don't see the ugliness any more.
Attached file reduced testcase
Greatly reduced testcase. To reproduce, it requires both that there be a floating (fixed) DIV, and that the content DIV have "overflow:auto" set.
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050407 Firefox/1.0+ I can see this.
Keywords: testcase
Flags: blocking1.8b2?
Flags: blocking-aviary1.1?
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050408 Firefox/1.0+ There is also a update/dirty/redraw problem in which sometimes when moving to a new URL, parts of the previous one 'show through'. I don't have a recipe for reproduction.
(In reply to comment #4) > Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050408 > Firefox/1.0+ > > ... I don't have a recipe for reproduction. O.K. I realise that that is a little unsatisfactory. Here a receipe that works most of the time: Go to a page like http://e2fsprogs.sourceforge.net/ which has links to a 'Sourceforge ummary page'. Open that link and others in new tabs, Cmd-click for example. Go another tab, and then to the summary page. If my recipe worked, the the advert at the top (a javascript write( )) will not have been painted, and will show what was on the previous tab. Refreshing, or returning again will cause a repaint. I suspect that this is a minor regression, or a manifestation of the problem reported in comment 0 rather than anything major, but it may be a little early to be certain.
Flags: blocking1.8b3?
Flags: blocking1.8b2?
Flags: blocking1.8b2-
Priority: -- → P2
Target Milestone: --- → mozilla1.8beta3
Can you test with a nightly trunk build? We just switch mac to use a new eventloop model that will probably significantly hide the symptoms here.
I doubt the new event handling will fix this. It's a bug in the mac widget code.
Do the same symptoms appear in camino (cocoa widgets)?
(In reply to comment #8) > Do the same symptoms appear in camino (cocoa widgets)? No.
Flags: blocking1.8b4?
Flags: blocking1.8b3?
Flags: blocking1.8b3-
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050702 Firefox/1.0+ Still in.
Whiteboard: [no l10n impact]
Flags: blocking-aviary1.1?
This bug is very similar to bug 259563, which has a testcase with both 'overflow:scroll' and 'overflow:auto'.
*** Bug 259563 has been marked as a duplicate of this bug. ***
Attached patch PatchSplinter Review
The bug was that the code paths through nsWindow::Scroll that hit the Invalidate() calls caused the window state (probably the update region) to be left in a bad way for later drawing. The easiest fix for this is to make the invalidates asynchronous.
Attachment #189847 - Flags: superreview?(jhpedemonte)
Attachment #189847 - Flags: review?(mark)
Attachment #189847 - Flags: review?(mark) → review+
Attachment #189847 - Flags: superreview?(jhpedemonte) → review+
Attachment #189847 - Flags: superreview?
Comment on attachment 189847 [details] [diff] [review] Patch I approve!
Attachment #189847 - Flags: superreview?
Attachment #189847 - Flags: superreview+
Attachment #189847 - Flags: approval1.8b4?
Comment on attachment 189847 [details] [diff] [review] Patch So do I! a=shaver
Attachment #189847 - Flags: approval1.8b4? → approval1.8b4+
Assignee: joshmoz → sfraser_bugs
Checked in.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Flags: blocking1.8b4?
*** Bug 228838 has been marked as a duplicate of this bug. ***
(In reply to comment #5) > (In reply to comment #4) > > Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) > > Gecko/20050408 Firefox/1.0+ > > > Go to a page like http://e2fsprogs.sourceforge.net/ which has links to a > 'Sourceforge Summary page'. > > Open that link and others in new tabs, Cmd-click for example. Go another > tab, and then to the summary page. > > ... Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20050805 Firefox/1.0+ I am not seeing this problem (nor the defect reported in comment 0 ). I suspect that this bug has many duplicates. I will open a new report if I see it again, but it likely fixed.
*** Bug 292935 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: