Fix bug 289353: bad drawing on scrolling, if the scrolled area is not rectangular (e.g. page with abs-positioned divs). The synchronous update was messing with the window state so that later drawing was incorrectly clipped. Fixed by using an asycnchronous invalidate. r=mento, r=jhpedemonte, sr=me, a=shaver.